<resources>
    <string name="app_name">Tupi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1666121893601284</string>

    <string-array name="Tags">
        <item>Usuario</item>
        <item>Registro</item>
        <item>Contactos</item>
        <item>Pronóstico</item>
    </string-array>

    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="headlines">Encabezados de</string>

    <string name="cabecera">Pronóstico para hoy\n en</string>

    <string name="grado">C°</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>

    <string name="nombre"><b>Nombre:</b> \t\t\t\t</string>
    <string name="email"><b>Email:</b> \t\t\t\t\t</string>
    <string name="birthday"><b>Nacimiento:</b> \t\t</string>

    <string name="informacion">Información</string>


    <!--    Fragment Registro -->

    <string name="contact_new">Nuevo contacto</string>
    <string name="contact_name">Nombre contacto</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="email_hint">Email</string>
    <string name="address">Dirección</string>
    <string name="add_contact">Agregar Contacto</string>



    <!--    Mensajes Base de Datos -->
    <string name="insert_ok">Contacto agregado</string>

</resources>
