<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacion"
        android:textSize="30sp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/birthday"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</LinearLayout>